Resolved spacing issues and temporarily disabled About button

--- a/sidepanel/sidepanel.css
+++ b/sidepanel/sidepanel.css
@@ -40,6 +40,7 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-y: auto;
 }
 
 h1 {
@@ -113,6 +114,10 @@ a:active {
 /* ******************* */
 /* *     Section     * */
 /* ******************* */
+
+body > main {
+  padding-bottom: 3rem;
+}
 
 section {
   display: flex;
